<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_health_insurance">HealthInsuranceActivity</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_page_overview">The Home Tab, the one which shows your location, is where you can start and end your runs. A timer will start at the top of the screen and
        will stop when the you choose to end the run. From here, you can also access the other tabs: Goals, Health Insurance, and Help. The Goals Tab, shows you your current
        goals, your progress towards them, and whether you've completed any. You may set or change goals at any time. The Health Insurance Tab, allows you to send your running data
        off your device and the specifics can be found in that tab.</string>
    <string name="health_insurance_page_overview">This app can, if you allow it to, store your running data off your device which would allow
        companies or agencies to look at your running data in order to provide discounts for your health insurance. This is completely optional.
        If you would like to send your running data, create a new profile and press the update running data button. If you have already created a profile, you only need to login.</string>
    <string name="OneMileText">1 Mile</string>
    <string name="FiveMilesText">5 Miles</string>
    <string name="TenMilesText">10 Miles</string>
    <string name="TwentyMilesText">20 Miles</string>
    <string name="FiftyMilesText">50 Miles</string>
    <string name="OneHundredMilesText">100 Miles</string>
    <string name="mileTimeText">Pick Your Mile Time Goal</string>
    <string name="NineMinuteMile">9 Minutes or Less Mile</string>
    <string name="EightMinuteMile">8 Minutes or Less Mile </string>
    <string name="SevenMinuteMile">7 Minutes or Less Mile</string>
    <string name="SixMinuteMile">6 Minutes or Less Mile</string>
    <string name="FiveMinuteMile">5 Minutes or Less Mile</string>
    <string name="goal1_fragment_text">Set Your Distance Goal</string>
    <string name="setProfileButtonText">Create Profile/LogIn</string>
    <string name="updateRunningDataText">Update Running Data</string>
    <string name="enterUserIDText">Enter Your ID Here (9 Digit, Numbers Only)</string>
    <string name="enterUserNameText">Enter Your Name Here (First Name, M.I., Last Name</string>
</resources>
